# product_organizer_bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
trip_master/domain/: enums.py
trip_master/domain/entities/: item.py  trip.py
trip_master/domain/interfaces/: item_repo.py  trip_repo.py
trip_master/infrastructure/: config.py
trip_master/infrastructure/ai/: gemini_client.py
trip_master/infrastructure/db/: item_repo.py  models.py  session.py  trip_repo.py
trip_master/presentation/bot/: filters.py  keyboards.py  router.py
trip_master/presentation/webapp/: api.py  server.py
trip_master/presentation/webapp/static/: app.js  index.html  style.css
