[project]
name = "trip-master"
version = "0.1.0"
description = "Telegram bot for group trip coordination"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "google-genai>=1.14,<2",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.18,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
